# Multisensory-Device

./: .dockerignore  .gitignore  README.md  platformio.ini
Informes_VehicleSense/: README.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: __init__.py  auth.py  fleet.py  operations.py  router.py
backend/app/core/: __init__.py  config.py  logging.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  entities.py
backend/app/mqtt/: __init__.py  client.py
backend/app/schemas/: __init__.py  auth.py  fleet.py
backend/app/services/: __init__.py  alerts.py  commands.py  contract_validator.py  device_status.py  ingestion.py  time_utils.py  trips.py
backend/app/websocket/: __init__.py  manager.py
backend/migrations/: env.py
backend/migrations/versions/: cd5ddc949e1d_initial_vehiclesense_schema.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_contract_validator.py  test_ingestion.py  test_mqtt.py
contracts/: README.md  mqtt-topics.md  schema-v2-to-v3.md  validate_fixtures.py
deploy/: .env.example  README.md  compose.production.yml
docs/: acoustic_monitoring.md  architecture.md  cellular_mqtt.md  cloud_architecture.md  hivemq_cloud.md  local_web_ota.md  pruebas_realizadas.md  security.md  storage.md  telemetry_payload.md  tests.md  vehiclesense_implementation_plan.md  wiring.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.static.conf  package-lock.json  package.json  vite.config.ts
include/: config.h  pins.h  secrets_example.h  telemetry_schema.h
simulator/: .env.example  README.md  pyproject.toml
simulator/tests/: test_generator.py
simulator/vehiclesense_simulator/: __init__.py  config.py  contracts.py  generator.py  main.py  publisher.py
src/: main.cpp
(+186 files in other folders)
