[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vehiclesense-backend"
version = "0.1.0"
description = "Trusted MQTT, PostgreSQL, REST and WebSocket layer for VehicleSense"
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "jsonschema[format]>=4.23,<5",
  "paho-mqtt>=2.1,<3",
  "pydantic-settings>=2.7,<3",
  "pwdlib[argon2]>=0.2,<1",
  "PyJWT[crypto]>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.37,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]
