[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "vehiclesense-simulator"
version = "0.1.0"
description = "Contract-valid multi-vehicle MQTT simulator for VehicleSense"
requires-python = ">=3.12,<3.14"
dependencies = [
  "jsonschema[format]>=4.23,<5",
  "paho-mqtt>=2.1,<3",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
vehiclesense-simulator = "vehiclesense_simulator.main:main"

[tool.hatch.build.targets.wheel]
packages = ["vehiclesense_simulator"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
